# minecraft-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: asset_downloader.rs  auth.rs  full_launch.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: client_manifest_parse.rs  manifest_parse.rs
gui/: Cargo.toml
gui/src/: app.rs  auth.rs  lib.rs  main.rs
src/: auth.rs  downloader.rs  errors.rs  launcher.rs  lib.rs  parser.rs
src-old/: parser.rs
src-old/assets/structs/: launcher_meta.rs  version.rs
src/assets/: asset_index.rs  client.rs  version.rs
src/auth/: mod.rs  structs.rs
