[package]
name = "copper"
version = "0.1.0"
edition = "2021"
authors = ["suyashtnt <suyashtnt@gmail.com>"]
description = "Minecraft launcher: rust edition"
documentation = "https://docs.rs/minecraft-rs"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/glowsquid-launcher/minecraft-rs#readme"
repository = "https://github.com/glowsquid-launcher/minecraft-rs"
keywords = ["minecraft", "launcher", "game"]
categories = ["api-bindings"]

[dependencies]
axum = { version = "0.6.18", features = ["tracing"] }
error-stack = { version = "0.3.1", features = ["spantrace"] }
fs = "0.0.5"
oauth2 = "4.4.1"
reqwest = { version = "0.11.18", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1.0.167", features = ["derive"] }
serde_json = "1.0.100"
tokio = { version = "1.29.1", features = ["fs"] }
tracing = "0.1.37"
tracing-error = "0.2.0"

[dev-dependencies]
axum = "0.6.18"
tokio = { version = "1.29.1", features = ["macros", "rt"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

# why do you have to do this mojang
[target.'cfg(target_os = "windows")'.dependencies]
winsafe = { version = "0.0.17", features = ["kernel"] }
