[package]
name = "gui"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.19.0"
eframe = { version = "0.19.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] }
tracing-subscriber = "0.3"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
copper = { path = "../" }
eyre = "0.6.8"
